data/all_generated_tests/raw_wast_tests/loop_InvalidorInconsistentControlFlowGraph_859.wast
;; 10. **Loop without Proper Termination**:     - **Description**: Implement a loop where the `end` instruction is either missing or incorrectly placed, disrupting proper loop termination.     - **Constraint Checked**: Well-nested structure and proper termination of loop blocks.     - **CFG Relevance**: Ensures the CFG accurately reflects loop boundaries and detects missing or misplaced termination, preserving control flow integrity.

(assert_invalid
  (module (func $loop-without-termination
    (loop (result i32) (i32.const 42) ;; Missing `end` instruction
  ))
  "unexpected end of code"
)